# img_dumpster

./: .gitignore  Cargo.toml  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/squireofsoftware/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/squireofsoftware/: MainActivity.kt
app/src/main/java/com/squireofsoftware/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/squireofsoftware/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
src/routes/: mod.rs
src/routes/images/: post.rs
src/routes/uploads/: post.rs
webserver/: Cargo.toml
webserver/src/: main.rs
webserver/src/routes/: exif_test.rs  hello_world.rs
webserver/src/routes/images/: post.rs
webserver/src/routes/uploads/: post.rs
