[package]
name = "img_dumpster"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
anyhow = "1.0.70"
digest = "0.10.6"
kamadak-exif = "0.5.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
uuid = { version = "1.3.0", features = ["v4"] }

[registries.crates-io]
protocol = "sparse"
